Added annotation for models

--- a/test/fixtures/admins.yml
+++ b/test/fixtures/admins.yml
@@ -1,3 +1,21 @@
+# == Schema Information
+#
+# Table name: admins
+#
+#  id            :integer          not null, primary key
+#  address       :string
+#  age           :integer
+#  city          :string
+#  email_address :string
+#  first_name    :string
+#  last_name     :string
+#  phone         :integer
+#  state         :string
+#  zip           :integer
+#  created_at    :datetime         not null
+#  updated_at    :datetime         not null
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
