--- a/test/fixtures/gm_form1s.yml
+++ b/test/fixtures/gm_form1s.yml
@@ -12,6 +12,8 @@
 #  zip        :integer
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
+#  admin_id   :integer
+#  user_id    :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
