--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,43 +2,37 @@
 #
 # Table name: users
 #
-#  id              :integer          not null, primary key
-#  address         :string
-#  age             :integer
-#  city            :string
-#  email_address   :string
-#  first_name      :string
-#  last_name       :string
-#  membership_type :string
-#  phone           :integer
-#  state           :string
-#  zip             :integer
-#  created_at      :datetime         not null
-#  updated_at      :datetime         not null
+#  id                     :integer          not null, primary key
+#  address                :string
+#  age                    :integer
+#  city                   :string
+#  email                  :string           default(""), not null
+#  encrypted_password     :string           default(""), not null
+#  first_name             :string
+#  last_name              :string
+#  phone                  :integer
+#  remember_created_at    :datetime
+#  reset_password_sent_at :datetime
+#  reset_password_token   :string
+#  state                  :string
+#  zip                    :integer
+#  created_at             :datetime         not null
+#  updated_at             :datetime         not null
+#
+# Indexes
+#
+#  index_users_on_email                 (email) UNIQUE
+#  index_users_on_reset_password_token  (reset_password_token) UNIQUE
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  first_name: MyString
-  last_name: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  age: 1
-  membership_type: MyString
-  email_address: MyString
-  phone: 1
-
-two:
-  first_name: MyString
-  last_name: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  age: 1
-  membership_type: MyString
-  email_address: MyString
-  phone: 1
+# This model initially had no columns defined. If you add columns to the
+# model remove the '{}' from the fixture names and add the columns immediately
+# below each fixture, per the syntax in the comments below
+#
+one: {}
+# column: value
+#
+two: {}
+# column: value
