Added validation testing for users and updated the user's form

--- a/test/fixtures/dealer_forms.yml
+++ b/test/fixtures/dealer_forms.yml
@@ -20,40 +20,40 @@
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  first_name: MyString
-  last_name: MyString
-  badge_name: MyString
-  age: 1
-  business_name: MyString
-  type_of_merchandise_or_service: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  phone: 1
-  company_website_address: MyString
-  email_address: MyString
-  number_of_spaces: 1
-  display_require_AC_power: MyString
-  number_of_memberships: 1
-  list_names_ages_of_extra_members: MyString
+# one:
+#   first_name: MyString
+#   last_name: MyString
+#   badge_name: MyString
+#   age: 1
+#   business_name: MyString
+#   type_of_merchandise_or_service: MyString
+#   address: MyString
+#   city: MyString
+#   state: MyString
+#   zip: 1
+#   phone: 1
+#   company_website_address: MyString
+#   email_address: MyString
+#   number_of_spaces: 1
+#   display_require_AC_power: MyString
+#   number_of_memberships: 1
+#   list_names_ages_of_extra_members: MyString
 
-two:
-  first_name: MyString
-  last_name: MyString
-  badge_name: MyString
-  age: 1
-  business_name: MyString
-  type_of_merchandise_or_service: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  phone: 1
-  company_website_address: MyString
-  email_address: MyString
-  number_of_spaces: 1
-  display_require_AC_power: MyString
-  number_of_memberships: 1
-  list_names_ages_of_extra_members: MyString
+# two:
+#   first_name: MyString
+#   last_name: MyString
+#   badge_name: MyString
+#   age: 1
+#   business_name: MyString
+#   type_of_merchandise_or_service: MyString
+#   address: MyString
+#   city: MyString
+#   state: MyString
+#   zip: 1
+#   phone: 1
+#   company_website_address: MyString
+#   email_address: MyString
+#   number_of_spaces: 1
+#   display_require_AC_power: MyString
+#   number_of_memberships: 1
+#   list_names_ages_of_extra_members: MyString
