--- a/test/fixtures/panelist_forms.yml
+++ b/test/fixtures/panelist_forms.yml
@@ -27,54 +27,54 @@
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  title: MyString
-  first_name: MyString
-  last_name: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  age: 1
-  pen_name: MyString
-  badge_name: MyString
-  phone: 1
-  email_address: MyString
-  website: MyString
-  availability: MyString
-  primary_professional_focus: MyString
-  secondary_professional_focus: MyString
-  panelist_before: false
-  time_in_pro_row: false
-  amount_of_pro_row: 1
-  place_art_in_art_room: false
-  recent_credits: MyString
-  short_biography: MyString
-  panel_suggestions: MyString
-  amount_of_panels_at_convention: 1
+# one:
+#   title: MyString
+#   first_name: MyString
+#   last_name: MyString
+#   address: MyString
+#   city: MyString
+#   state: MyString
+#   zip: 1
+#   age: 1
+#   pen_name: MyString
+#   badge_name: MyString
+#   phone: 1
+#   email_address: MyString
+#   website: MyString
+#   availability: MyString
+#   primary_professional_focus: MyString
+#   secondary_professional_focus: MyString
+#   panelist_before: false
+#   time_in_pro_row: false
+#   amount_of_pro_row: 1
+#   place_art_in_art_room: false
+#   recent_credits: MyString
+#   short_biography: MyString
+#   panel_suggestions: MyString
+#   amount_of_panels_at_convention: 1
 
-two:
-  title: MyString
-  first_name: MyString
-  last_name: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  age: 1
-  pen_name: MyString
-  badge_name: MyString
-  phone: 1
-  email_address: MyString
-  website: MyString
-  availability: MyString
-  primary_professional_focus: MyString
-  secondary_professional_focus: MyString
-  panelist_before: false
-  time_in_pro_row: false
-  amount_of_pro_row: 1
-  place_art_in_art_room: false
-  recent_credits: MyString
-  short_biography: MyString
-  panel_suggestions: MyString
-  amount_of_panels_at_convention: 1
+# two:
+#   title: MyString
+#   first_name: MyString
+#   last_name: MyString
+#   address: MyString
+#   city: MyString
+#   state: MyString
+#   zip: 1
+#   age: 1
+#   pen_name: MyString
+#   badge_name: MyString
+#   phone: 1
+#   email_address: MyString
+#   website: MyString
+#   availability: MyString
+#   primary_professional_focus: MyString
+#   secondary_professional_focus: MyString
+#   panelist_before: false
+#   time_in_pro_row: false
+#   amount_of_pro_row: 1
+#   place_art_in_art_room: false
+#   recent_credits: MyString
+#   short_biography: MyString
+#   panel_suggestions: MyString
+#   amount_of_panels_at_convention: 1
