--- a/test/fixtures/admins.yml
+++ b/test/fixtures/admins.yml
@@ -18,24 +18,24 @@
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  first_name: MyString
-  last_name: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  age: 1
-  email_address: MyString
-  phone: 1
+# one:
+#   first_name: MyString
+#   last_name: MyString
+#   address: MyString
+#   city: MyString
+#   state: MyString
+#   zip: 1
+#   age: 1
+#   email_address: MyString
+#   phone: 1
 
-two:
-  first_name: MyString
-  last_name: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  age: 1
-  email_address: MyString
-  phone: 1
+# two:
+#   first_name: MyString
+#   last_name: MyString
+#   address: MyString
+#   city: MyString
+#   state: MyString
+#   zip: 1
+#   age: 1
+#   email_address: MyString
+#   phone: 1
