--- a/test/fixtures/gm_form1s.yml
+++ b/test/fixtures/gm_form1s.yml
@@ -15,20 +15,20 @@
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  first_name: MyString
-  last_name: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  age: 1
+# one:
+#   first_name: MyString
+#   last_name: MyString
+#   address: MyString
+#   city: MyString
+#   state: MyString
+#   zip: 1
+#   age: 1
 
-two:
-  first_name: MyString
-  last_name: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  age: 1
+# two:
+#   first_name: MyString
+#   last_name: MyString
+#   address: MyString
+#   city: MyString
+#   state: MyString
+#   zip: 1
+#   age: 1
