--- a/test/fixtures/gm_form2s.yml
+++ b/test/fixtures/gm_form2s.yml
@@ -27,22 +27,22 @@
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  first_name: MyString
-  last_name: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  age: 1
-  games: MyString
+# one:
+#   first_name: MyString
+#   last_name: MyString
+#   address: MyString
+#   city: MyString
+#   state: MyString
+#   zip: 1
+#   age: 1
+#   games: MyString
 
-two:
-  first_name: MyString
-  last_name: MyString
-  address: MyString
-  city: MyString
-  state: MyString
-  zip: 1
-  age: 1
-  games: MyString
+# two:
+#   first_name: MyString
+#   last_name: MyString
+#   address: MyString
+#   city: MyString
+#   state: MyString
+#   zip: 1
+#   age: 1
+#   games: MyString
