--- a/test/fixtures/panelist_forms.yml
+++ b/test/fixtures/panelist_forms.yml
@@ -9,14 +9,14 @@
 #  availability                   :string
 #  badge_name                     :string
 #  panel_suggestions              :string
-#  panelist_before                :boolean
+#  panelist_before                :string
 #  pen_name                       :string
-#  place_art_in_art_room          :boolean
+#  place_art_in_art_room          :string
 #  primary_professional_focus     :string
 #  recent_credits                 :string
 #  secondary_professional_focus   :string
 #  short_biography                :string
-#  time_in_pro_row                :boolean
+#  time_in_pro_row                :string
 #  title                          :string
 #  website                        :string
 #  created_at                     :datetime         not null
@@ -35,10 +35,10 @@ one:
   availability: "9:11am"
   primary_professional_focus: "Literary"
   secondary_professional_focus: "Gaming"
-  panelist_before: true
-  time_in_pro_row: true
+  panelist_before: "true"
+  time_in_pro_row: "true"
   amount_of_pro_row: 10
-  place_art_in_art_room: true
+  place_art_in_art_room: "true"
   recent_credits: "got credited with a lot of stuff"
   short_biography: "I used to work in the circuit and now im here"
   panel_suggestions: "I like to have a lot of ropes like a lot of ropes"
